# mril_transfer_protocol

./: .gitignore  Cargo.toml  README.md
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/server/src/: main.rs
src/: bufferable.rs  lib.rs  package.rs  shake.rs  stream.rs  utils.rs
src/package/: mod.rs  package_uuid.rs  packages.rs
tests/client/: Cargo.toml
tests/client/src/: main.rs
tests/server/: Cargo.toml
tests/server/src/: main.rs
