[package]
name = "mril_transfer_protocol"
version = "0.1.0"
edition = "2021"
description = "MBCP (Mril Transfer Protocol (MTP) "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.62"
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4"]}
